[Material][Mac] Fixed App Bookmark Item highlight

BUG=630959

Review-Url: https://codereview.chromium.org/2193383002
Cr-Commit-Position: refs/heads/master@{#409708}

Former-commit-id: 131f85cadf19ef25e9eafc14e39230cee35e7305